--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -8,35 +8,43 @@ bodyClass: "page-teams"
     <div class="row justify-content-start">
         <div class="col-12">
             <div class="service service-single">
-                <h1 class="title">{{page.title}}</h1>
-                <div class="content mt-4">{{content}}</div>
+                <h1 class="title">{{ page.title }}</h1>
+                <div class="content mt-4">{{ content }}</div>
+		    <div class="row">
+			{% assign years = site.team | map: "year" | compact | uniq %}
+			{% for year in years %}
+			<div class="col-12 mb-2">
+			    <h1 style="font-weight: normal; margin-top: 4px;">{{ year }}</h1>
+			    {% assign teams_by_year = site.team | where: "year", year | sort: "weight" %}
+			    {% for team in teams_by_year %}
+			    <div class="team team-summary team-summary-large">
+				{% if team.image %}
+				<div class="team-image">
+				    <img width="90" height="90" alt="{{ team.title }}" class="img-fluid mb-2" src="{{ team.image | relative_url }}" />
+				</div>
+				{% endif %}
+				<div class="team-meta">
+				    <h2 class="team-name">
+					{% if team.externalurl %}
+	                                <a href="{{ team.externalurl }}">
+	                                {% endif %}
+	                                {{ team.title }}
+	                                </a>
+				    </h2>
+				    <p class="team-description">{{ team.authors }}</p>
+				    {% if team.linkedinurl %}
+				    <a target="_blank" href="{{ team.linkedinurl }}" rel="noreferrer">LinkedIn</a>
+				    {% endif %}
+<div class="team-content">{{ team.content | truncate: 250 }}</div>
+				</div>
+			    </div>
+			    {% endfor %}
+			</div>
+			{% endfor %}
+		    </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container pt-6 pb-6">
-    <div class="row">
-        {% assign promoted_teams = site.team | where: "year", true | sort: "weight" %}
-        {% for team in promoted_teams %}
-        <div class="col-12 mb-2">
-            <div class="team team-summary team-summary-large">
-                {% if team.image %}
-                <div class="team-image">
-                    <img width="90" height="90" alt="{{ team.title }}" class="img-fluid mb-2" src="{{ team.image | relative_url }}" />
-                </div>
-                {% endif %}
-                <div class="team-meta">
-                    <h2 class="team-name"><a href="{{ team.url | relative_url }}">{{ team.title }}</a></h2>
-                    <p class="team-description">{{ team.jobtitle }}</p>
-                    {% if team.linkedinurl %}
-                    <a target="_blank" href="{{ team.linkedinurl }}" rel="noreferrer">LinkedIn</a>
-                    {% endif %}
-                </div>
-                <div class="team-content">{{ team.content | truncate: 120 }}</div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
 
-</div>
