--- a/_sass/pages/_page-teams.scss
+++ b/_sass/pages/_page-teams.scss
@@ -4,19 +4,21 @@
     flex-wrap: wrap;
     flex-direction: row;
     .team-image {
-      height: 60px;
-      width: 60px;
-      margin-right: 10px;
+      height: 150px; /* 변경된 크기 */
+      width: 150px; /* 변경된 크기 */
+      margin-right: 20px;
       border-radius: 50%;
       overflow: hidden;
       img {
-        width: 60px;
+        width: 100%; /* 이미지를 부모 요소에 맞게 확장 */
+        height: 100%; /* 이미지를 부모 요소에 맞게 확장 */
       }
     }
     .team-meta {
       flex: 1;
       h2 {
         margin: 0;
+        margin-top: 20px;
         font-size: 22px;
         font-weight: normal;
       }
@@ -24,13 +26,14 @@
         color: $black;
         text-transform: uppercase;
         margin: 0;
-        font-size: 12px;
+        font-size: 16px;
         font-weight: 500;
       }
     }
     .team-content {
       margin-top: 20px;
       flex: 1 0 100%;
+      font-weight: normal;
     }
   }
 
@@ -39,14 +42,16 @@
     padding: 30px;
     border-radius: 3px;
     .team-image {
-      height: 90px;
-      width: 90px;
-      margin-right: 20px;
+      height: 200px; /* 변경된 크기 */
+      width: 200px; /* 변경된 크기 */
+      margin-right: 30px;
       border-radius: 50%;
       overflow: hidden;
       img {
-        width: 90px;
+        width: 100%; /* 이미지를 부모 요소에 맞게 확장 */
+        height: 100%; /* 이미지를 부모 요소에 맞게 확장 */
       }
     }
   }
 }
+
