--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,8 +17,8 @@ $link-hover-color: lighten($primary, 10%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: Ubuntu;
-$font-family-heading: Ubuntu;
+$font-family-base: 'Ubuntu', sans-serif;
+$font-family-heading: 'Ubuntu', sans-serif;
 
 // Footer
 $footer-background-color: $primary;
