--- a/_sass/components/_fonts.scss
+++ b/_sass/components/_fonts.scss
@@ -1,7 +1,11 @@
 @font-face {
-	font-family: 'Playfair Display';
+	font-family: 'Ubuntu';
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: local(''), url('../fonts/playfair-display.woff2') format('woff2');
+	src: local(''), url('../fonts/Ubuntu/Ubuntu-Medium.ttf') format('truetype');
 }
+
+// 나머지 스타일 파일에서 사용할 수 있도록 변수 업데이트
+$font-family-base: 'Ubuntu', sans-serif;
+$font-family-heading: 'Ubuntu', sans-serif;
