default.html update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{page.title}}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="https://github.com/S-CHOI-S/S-CHOI-S.github.io/assets/113012648/8442be7c-ec72-40d4-ab6b-74dcb3603b50">
+  <link rel="icon" type="image/png" href="{{ '/images/S-CHOI-S_logo.svg' | relative_url }}">
   <!-- Google Fonts CDN -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
