--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 // Colors
-$primary: #e55d77;
+$primary: #e5261f;
 $primary-dark: #a01b16;
 $secondary: #f88379;
 $black: #2f2f41;
@@ -17,8 +17,8 @@ $link-hover-color: lighten($primary, 10%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'Ubuntu', sans-serif;
-$font-family-heading: 'Ubuntu', sans-serif;
+$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
+$font-family-heading: "Playfair Display", serif, -apple-system;
 
 // Footer
 $footer-background-color: $primary;
@@ -26,11 +26,57 @@ $footer-text-color: $white;
 $sub-footer-background-color: darken($primary, 10%);
 $sub-footer-text-color: $white;
 
-// Bootstrap
+// Bootstrap 5.3.2
+
+// 1. Include Bootstrap functions first
+@import "bootstrap/functions";
+
+// 2. Include our variable overrides here
 @import "bootstrap-variables";
-@import "bootstrap/bootstrap-reboot";
-@import "bootstrap/bootstrap-grid";
-// @import 'bootstrap/bootstrap'; // Uncomment this line to import the entire Bootstrap library
+
+// 3. Include main bootstrap variables and functions
+@import "bootstrap/variables";
+@import "bootstrap/variables-dark";
+@import "bootstrap/maps";
+@import "bootstrap/mixins";
+@import "bootstrap/utilities";
+
+// 4. Include optional Bootstrap components
+@import "bootstrap/root";
+@import "bootstrap/reboot";
+@import "bootstrap/type";
+@import "bootstrap/images";
+@import "bootstrap/containers";
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+// @import "bootstrap/buttons";
+// @import "bootstrap/transitions";
+// @import "bootstrap/dropdown";
+// @import "bootstrap/button-group";
+// @import "bootstrap/nav";
+// @import "bootstrap/navbar";
+// @import "bootstrap/card";
+// @import "bootstrap/accordion";
+// @import "bootstrap/breadcrumb";
+// @import "bootstrap/pagination";
+// @import "bootstrap/badge";
+// @import "bootstrap/alert";
+// @import "bootstrap/progress";
+// @import "bootstrap/list-group";
+// @import "bootstrap/close";
+// @import "bootstrap/toasts";
+// @import "bootstrap/modal";
+// @import "bootstrap/tooltip";
+// @import "bootstrap/popover";
+// @import "bootstrap/carousel";
+// @import "bootstrap/spinners";
+// @import "bootstrap/offcanvas";
+// @import "bootstrap/placeholders";
+
+// 5. Include Bootstrap helpers and utilities
+@import "bootstrap/helpers";
+@import "bootstrap/utilities/api";
 
 // Libraries
 @import "libraries/hamburgers/hamburgers";
@@ -65,7 +111,6 @@ body {
   font-size: 16px;
   line-height: 1.2;
   font-family: $font-family-base;
-  font-style: italic;
   @include media-breakpoint-up(md) {
     font-size: 16px;
     line-height: 1.3;
