--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,9 @@
 ---
 
 // Colors
-$primary: #e55d77;
-$primary-dark: #a01b16;
-$secondary: #f88379;
+$primary: #FF9B50; //#e55d77;
+$primary-dark: #E25E3E; //#a01b16;
+$secondary: #FFBB5C; //#f88379;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
