--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -46,7 +46,7 @@ bodyClass: "page-publications"
             </div>
             <div class="text-container">
                 <div class="text-section">
-		    <b style="font-size: 32px;"><a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">Manipulator</a></b> <br><br>
+		    <b style="font-size: 32px;"><a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">Manipulator System Based on Compliance Control For Object Manipulation</a></b> <br><br>
                     <p>
                         This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It's like a stuck record. The ear demands some variety.
                     </p>
