--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -42,7 +42,7 @@ bodyClass: "page-publications"
     <div class="row">
         <div class="publications-box" style='padding:0.1em; background-color:#FFFFFF; border: solid #FFBB5C 4px; border-radius: 10px; display: flex; align-items: center;'>
             <div class="image-container">
-                <img width="300" height="300" alt="Peter Van Eijk" class="img-fluid mb-2" src="/images/team/peter-van-eijk-711986-unsplash.jpg" style='border-radius: 10px;'/>
+                <img width="300" height="300" alt="Peter Van Eijk" class="img-fluid mb-2" src="/images/icros2023.png" style='border-radius: 10px;'/>
             </div>
             <div class="text-container">
                 <div class="text-section">
