--- a/_layouts/links.html
+++ b/_layouts/links.html
@@ -53,7 +53,7 @@ bodyClass: "page-links"
                     <img width="60" height="60" alt="Google Scholar" class="img-fluid mb-2" src="/images/link/Google_Scholar_logo.png" />
                 </div>
                 <div class="link-meta">
-                    <h2 class="link-name"><a href="https://scholar.google.com/">Publications</a></h2>
+                    <h2 class="link-name"><a href="https://scholar.google.com/citations?view_op=list_works&hl=ko&user=fYjkNIUAAAAJ">Publications</a></h2>
                     <p class="link-description">Google Scholar</p>
                 </div>
             </div>
