--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -25,8 +25,8 @@ bodyClass: "page-publications"
   }
 
   .text-section {
-      margin-left: -2em;
-      margin-right: 1.5em;
+      margin-left: -4em;
+      margin-right: 2.5em;
       font-size: 20px;
       line-height: 1.2;
   }
@@ -38,18 +38,25 @@ bodyClass: "page-publications"
     </div>
 </div>
 
+<div class="year">
+	<div class="container text-center">
+		<h1 class="subtitle">2023Y</h1>
+	</div>
+</div>
+
 <div class="container pt-6 pb-6">
     <div class="row">
         <div class="publications-box" style='padding:0.1em; background-color:#FFFFFF; border: solid #FFBB5C 4px; border-radius: 10px; display: flex; align-items: center;'>
             <div class="image-container">
-                <img width="300" height="300" alt="Peter Van Eijk" class="img-fluid mb-2" src="/images/icros2023.png" style='border-radius: 10px;'/>
+                <img width="230" height="230" class="img-fluid mb-2" src="/images/icros2023.png" style='border-radius: 10px;'/>
             </div>
             <div class="text-container">
                 <div class="text-section">
-		    <b style="font-size: 32px;"><a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">Manipulator System Based on Compliance Control For Object Manipulation</a></b> <br><br>
+		    <b style="font-size: 30px;"><a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">Manipulator System Based on Compliance Control For Object Manipulation</a></b> <br><br>
                     <p>
-                        This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It's like a stuck record. The ear demands some variety.
-                    </p>
+			<strong><u>Sol Choi</u></strong>, Seuk Seo, Sanghyeok Jung, Seung Jae Lee <br>
+			2023 제어로봇시스템학회 국내학술대회 (ICROS) <span style="color:red;">[Best Paper Award-Winner]</span>
+</p>
                 </div>
             </div>
         </div>
