--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -44,7 +44,7 @@ bodyClass: "page-publications"
 	</div>
 </div>
 
-<div class="container pt-6 pb-6">
+<div class="container pt-6 pb-6 pt-md-10 pb-md-10">
     <div class="row">
         <div class="publications-box" style='padding:0.1em; background-color:#FFFFFF; border: solid #FFBB5C 3px; border-radius: 10px; display: flex; align-items: center;'>
             <div class="image-container">
