--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ bodyClass: "page-home"
             <h2 class="service-title">
               <a href="{{ service.url | relative_url }}">{{ service.title }}</a>
             </h2>
-            <p>{{ service.content | markdownify | strip_html | truncate: 100 }}</p>
+            <p>{{ service.content | markdownify | strip_html | truncate: service.truncate }}</p>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@ bodyClass: "page-home"
     </div>
     <div class="row justify-content-center">
       <div class="col-auto">
-        <a class="button button-primary" href="{{ "services" | relative_url }}">View All Services</a>
+        <a class="button button-primary" href="{{ "services" | relative_url }}">View All Publications</a>
       </div>
     </div>
   </div>
