--- a/_layouts/links.html
+++ b/_layouts/links.html
@@ -58,6 +58,18 @@ bodyClass: "page-links"
                 </div>
             </div>
         </div>
+	    
+	<div class="col-12 col-md-4 mb-3">
+            <div class="link link-summary d-flex align-items-center">
+                <div class="link-image mr-2">
+                    <img width="60" height="60" alt="Research Tips" class="img-fluid mb-2" src="/images/link/feather-pen-svgrepo-com.svg" />
+                </div>
+                <div class="link-meta">
+                    <h2 class="link-name"><a href="https://www.notion.so/pineasol/S-log-624ce31860574aac91f76440167f85dc?pvs=4#03bfec95a2f54ae98aeceeca6de5d441">Tips</a></h2>
+                    <p class="link-description">Research Tips</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
