--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,13 +73,13 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">Powerful things you can do with the Markdown editor</a>
+                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">My new member profile has been updated!</a>
               </h2>
-              <h4 class="card-text">There are lots of powerful things you can do with the Markdown editor. If you’ve gotten pretty comfortable with writing in Markdown, then you may enjoy some more advanced tips...</h4>
+              <h4 class="card-text">New profile as an MLCS member has been updated!</h4>
             </div>
             <div class="card-footer bg-white">
               <div class="wrapfooter">
-                <span class="post-date">12 Jun 2018</span>
+                <span class="post-date">Mar 2024</span>
                 <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                 <div class="clearfix"></div>
               </div>
@@ -101,13 +101,13 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/first-mass-produced/">The first mass-produced book to deviate from a rectilinear format</a>
+                <a class="text-dark" href="/mediumish-theme-jekyll/first-mass-produced/">My new member profile has been updated!</a>
               </h2>
-              <h4 class="card-text">The first mass-produced book to deviate from a rectilinear format, at least in the United States, is thought to be...</h4>
+              <h4 class="card-text">New profile as an ARC member has been updated!</h4>
             </div>
             <div class="card-footer bg-white">
               <div class="wrapfooter">
-                <span class="post-date">12 Jun 2018</span>
+                <span class="post-date">Mar 2024</span>
                 <span class="post-read-more"><a href="/mediumish-theme-jekyll/first-mass-produced/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                 <div class="clearfix"></div>
               </div>
@@ -129,13 +129,13 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">Powerful things you can do with the Markdown editor</a>
+                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">My new member profile has been updated!</a>
               </h2>
-              <h4 class="card-text">There are lots of powerful things you can do with the Markdown editor. If you’ve gotten pretty comfortable with writing in Markdown, then you may enjoy some more advanced tips...</h4>
+              <h4 class="card-text">New profile as an MRL member has been updated!</h4>
             </div>
             <div class="card-footer bg-white">
               <div class="wrapfooter">
-                <span class="post-date">12 Jun 2018</span>
+                <span class="post-date">Jan 2022</span>
                 <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                 <div class="clearfix"></div>
               </div>
