--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,12 +60,11 @@ bodyClass: "page-journey"
 
       <div class="row">
       
-
         <!-- begin post -->
         <div class="col-lg-6 mb-30px card-group">
           <div class="card h-100">
             <div class="maxthumb">
-              <a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">
+              <a href="https://mlcs.yonsei.ac.kr/people_student.html#:~:text=Path%20Planning%2C%20Control-,Sol%20Choi,-School%20of%20Mechanical">
                 <div class="image-container">
                   <img src="/images/journey/mlcs_member.png">
                 </div>
@@ -73,7 +72,7 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">My new member profile has been updated!</a>
+                <a class="text-dark" href="https://mlcs.yonsei.ac.kr/people_student.html#:~:text=Path%20Planning%2C%20Control-,Sol%20Choi,-School%20of%20Mechanical">Check Out My Updated Profile!</a>
               </h2>
               <h4 class="card-text">New profile as an MLCS member has been updated!</h4>
             </div>
@@ -93,7 +92,7 @@ bodyClass: "page-journey"
         <div class="col-lg-6 mb-30px card-group">
           <div class="card h-100">
             <div class="maxthumb">
-              <a href="/mediumish-theme-jekyll/first-mass-produced/">
+              <a href="https://sites.google.com/view/kist-arc/home/people#h.da4doy5gdx7r">
                 <div class="image-container">
                   <img src="/images/journey/arc_member.png">
                 </div>
@@ -101,7 +100,7 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/first-mass-produced/">My new member profile has been updated!</a>
+                <a class="text-dark" href="https://sites.google.com/view/kist-arc/home/people#h.da4doy5gdx7r">Check Out My Updated Profile!</a>
               </h2>
               <h4 class="card-text">New profile as an ARC member has been updated!</h4>
             </div>
@@ -121,7 +120,35 @@ bodyClass: "page-journey"
         <div class="col-lg-6 mb-30px card-group">
           <div class="card h-100">
             <div class="maxthumb">
-              <a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">
+              <a href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=536365">
+                <div class="image-container">
+                  <img src="/images/journey/ICROS2023_half.png">
+                </div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h2 class="card-title">
+                <a class="text-dark" href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=536365">[ICROS2023] Best Paper Award-Winner</a>
+              </h2>
+              <h4 class="card-text">Manipulator System Based on Compliance Control For Object Manipulation, Institute of Control, Robotics and Systems, 2023</h4>
+            </div>
+            <div class="card-footer bg-white">
+              <div class="wrapfooter">
+                <span class="post-date">Jan 2022</span>
+                <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end post -->
+        
+
+        <!-- begin post -->
+        <div class="col-lg-6 mb-30px card-group">
+          <div class="card h-100">
+            <div class="maxthumb">
+              <a href="https://mrl.seoultech.ac.kr/subList/20000005375#:~:text=Sol%20Choi%20(%EC%B5%9C%EC%86%94),-Education%C2%A0">
                 <div class="image-container">
                   <img src="/images/journey/mrl_member.png">
                 </div>
@@ -129,7 +156,7 @@ bodyClass: "page-journey"
             </div>
             <div class="card-body">
               <h2 class="card-title">
-                <a class="text-dark" href="/mediumish-theme-jekyll/powerful-things-markdown-editor/">My new member profile has been updated!</a>
+                <a class="text-dark" href="https://mrl.seoultech.ac.kr/subList/20000005375#:~:text=Sol%20Choi%20(%EC%B5%9C%EC%86%94),-Education%C2%A0">Check Out My Updated Profile!</a>
               </h2>
               <h4 class="card-text">New profile as an MRL member has been updated!</h4>
             </div>
