--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -115,6 +115,61 @@ bodyClass: "page-journey"
         </div>
         <!-- end post -->
         
+        
+        <!-- begin post -->
+        <div class="col-lg-6 mb-30px card-group">
+          <div class="card h-100">
+            <div class="maxthumb">
+              <a href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=543975">
+                <div class="image-container">
+                  <img src="/images/journey/st_linc3.0.jpg">
+                </div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h2 class="card-title">
+                <a class="text-dark" href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=543975">2024 ST LINC 3.0 Fair 1st Place-Winner</a>
+              </h2>
+              <h4 class="card-text">Development of Aerial Manipulator System for Object Manipulation, Capstone Design Best Achievement Award, ST LINC 3.0 Fair, 2024</h4>
+            </div>
+            <div class="card-footer bg-white">
+              <div class="wrapfooter">
+                <span class="post-date">Feb 2024</span>
+                <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end post -->
+
+        <!-- begin post -->
+        <div class="col-lg-6 mb-30px card-group">
+          <div class="card h-100">
+            <div class="maxthumb">
+              <a href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=536365">
+                <div class="image-container">
+                  <img src="/images/journey/capstone_design.png">
+                </div>
+              </a>
+            </div>
+            <div class="card-body">
+              <h2 class="card-title">
+                <a class="text-dark" href="https://msd.seoultech.ac.kr/information/news/?do=view&bnum=2275&bidx=536365">2023 Capstone Design 1st Place-Winner</a>
+              </h2>
+              <h4 class="card-text">Development of Aerial Manipulator System for Object Manipulation, Capstone Design Best Graduation Project Award, Seoul National University of Science and Technology, 2023</h4>
+            </div>
+            <div class="card-footer bg-white">
+              <div class="wrapfooter">
+                <span class="post-date">Nov 2023</span>
+                <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end post -->
+        
 
         <!-- begin post -->
         <div class="col-lg-6 mb-30px card-group">
@@ -134,7 +189,7 @@ bodyClass: "page-journey"
             </div>
             <div class="card-footer bg-white">
               <div class="wrapfooter">
-                <span class="post-date">Jan 2022</span>
+                <span class="post-date">Jun 2023</span>
                 <span class="post-read-more"><a href="/mediumish-theme-jekyll/powerful-things-markdown-editor/" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                 <div class="clearfix"></div>
               </div>
