--- a/_layouts/links.html
+++ b/_layouts/links.html
@@ -70,6 +70,18 @@ bodyClass: "page-links"
                 </div>
             </div>
         </div>
+        
+        <div class="col-12 col-md-4 mb-3">
+            <div class="link link-summary d-flex align-items-center">
+                <div class="link-image mr-2">
+                    <img width="60" height="60" alt="Linkedin" class="img-fluid mb-2" src="/images/link/linkedin.png" />
+                </div>
+                <div class="link-meta">
+                    <h2 class="link-name"><a href="www.linkedin.com/in/sol-choi-7106b6322">LinkedIn</a></h2>
+                    <p class="link-description">Social</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
