--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,6 +7,7 @@ bodyClass: "page-publications"
   .publications-box {
       margin-top: -70px;
       margin-bottom: 0px;
+      width: 1250px;
   }
 
   .image-container {
