--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,7 +7,7 @@ bodyClass: "page-publications"
   .publications-box {
       margin-top: -70px;
       margin-bottom: 0px;
-      width: 1250px;
+      width: 1200px;
   }
 
   .image-container {
@@ -39,6 +39,31 @@ bodyClass: "page-publications"
 
 <div class="year">
 	<div class="container text-center">
+		<h1>2024Y</h1>
+	</div>
+</div>
+
+<div class="container pt-6 pb-6 pt-md-10 pb-md-10">
+    <div class="row">
+        <div class="publications-box" style='padding:0.1em; background-color:#FFFFFF; border: solid #FFBB5C 3px; border-radius: 10px; display: flex; align-items: center;'>
+            <div class="image-container" style="flex: 1; display: flex; align-items: left;">
+                <img width="230" height="184" class="img-fluid mb-2" src="/images/artom.png" style='border-radius: 10px;'/>
+            </div>
+            <div class="text-container" style="flex: 2; display: flex; align-items: left;">
+                <div class="text-section">
+		    <h2><a href="https://s-choi-s.github.io/publications/">Subspace-wise Hybrid RL for Articulated Object Manipulation</a></h2> <br>
+            <p style="font-size: 16px;">
+			Yujin Kim, <strong><u>Sol Choi</u></strong>, Bum-Jae You, Keunwoo Jang, and Yisoo Lee <br>
+			<span style="color:green;">[Manuscript Submitted]</span>
+            </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="year">
+	<div class="container text-center">
 		<h1>2023Y</h1>
 	</div>
 </div>
@@ -53,7 +78,7 @@ bodyClass: "page-publications"
                 <div class="text-section">
 		    <h2><a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">Manipulator System Based on Compliance Control For Object Manipulation</a></h2> <br>
             <p style="font-size: 16px;">
-			<strong><u>Sol Choi</u></strong>, Seuk Seo, Sanghyeok Jung, Seung Jae Lee <br>
+			<strong><u>Sol Choi</u></strong>, Seuk Seo, Sanghyeok Jung, and Seung Jae Lee <br>
 			2023 제어로봇시스템학회 국내학술대회 (ICROS) <span style="color:red;">[Best Paper Award-Winner]</span>
             </p>
                 </div>
