--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -51,7 +51,7 @@ bodyClass: "page-publications"
             </div>
             <div class="text-container" style="flex: 2; display: flex; align-items: left;">
                 <div class="text-section">
-		    <h2><a href="https://s-choi-s.github.io/publications/">Subspace-wise Hybrid RL for Articulated Object Manipulation</a></h2> <br>
+		    <h2><a href="https://arxiv.org/abs/2412.08522">Subspace-wise Hybrid RL for Articulated Object Manipulation</a></h2> <br>
             <p style="font-size: 16px;">
 			Yujin Kim, <strong><u>Sol Choi</u></strong>, Bum-Jae You, Keunwoo Jang, and Yisoo Lee <br>
 			<span style="color:green;">[Manuscript Submitted]</span>
