--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -54,7 +54,10 @@ bodyClass: "page-publications"
 		    <h2><a href="https://arxiv.org/abs/2412.08522">Subspace-wise Hybrid RL for Articulated Object Manipulation</a></h2> <br>
             <p style="font-size: 16px;">
 			Yujin Kim, <strong><u>Sol Choi</u></strong>, Bum-Jae You, Keunwoo Jang, and Yisoo Lee <br>
-			<span style="color:green;">[Manuscript Submitted]</span>
+			<!--<span style="color:green;">[Manuscript Submitted]</span>-->
+			<a href="https://arxiv.org/abs/2412.08522">[paper]</a>
+			<a href="https://youtu.be/PkNxv0P8Atk?si=-uqdoonSskPeyFdZ">[video]</a>
+			<a href="https://S-CHOI-S.github.io/publications">[code]</a>
             </p>
                 </div>
             </div>
@@ -80,6 +83,7 @@ bodyClass: "page-publications"
             <p style="font-size: 16px;">
 			<strong><u>Sol Choi</u></strong>, Seuk Seo, Sanghyeok Jung, and Seung Jae Lee <br>
 			2023 제어로봇시스템학회 국내학술대회 (ICROS) <span style="color:red;">[Best Paper Award-Winner]</span>
+			<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE11480475">[paper]</a>
             </p>
                 </div>
             </div>
