--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -13,7 +13,7 @@ title: "CV"
                 <!-- <div class="col-md-12 mb-12"> -->
                     <h2 class="text-center">CV Preview</h2>
                     <iframe 
-                        src="/files/ICROS2023_S-CHOI-S_Poster.pdf"
+                        src="/files/Sol_Choi_CV.pdf"
                         width="100%" 
                         height="900px" 
                         style="border: none;">
