--- a/_layouts/links.html
+++ b/_layouts/links.html
@@ -17,7 +17,7 @@ bodyClass: "page-links"
                     <img width="60" height="42" alt="Youtube" class="img-fluid mb-2" src="/images/link/youtube_social_icon_red.png" />
                 </div>
                 <div class="link-meta">
-                    <h2 class="link-name"><a href="https://www.youtube.com/@SolChoi-mjrai">Videos</a></h2>
+                    <h2 class="link-name"><a href="https://www.youtube.com/@solchoi-robotics-ai">Videos</a></h2>
                     <p class="link-description">Youtube</p>
                 </div>
             </div>
