update project page link

--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -61,9 +61,9 @@ bodyClass: "page-publications"
             Taemoon Jeong, Yoonbyung Chai, <strong><u>Sol Choi</u></strong>, Jaewan Bak, Chanwoo Kim, Jihwan Yoon, Yisoo Lee, Kyungjae Lee, Joohyung Kim, and Sungjoon Choi <br>
             2025 IEEE-RAS International Conference on Humanoid Robots (Humanoids) <br>
 			<!--<span style="color:green;">[Manuscript Submitted]</span>-->
-			<a href="https://arxiv.org/abs/2412.08522">[paper]</a>
-			<a href="https://youtu.be/PkNxv0P8Atk?si=-uqdoonSskPeyFdZ">[video]</a>
-			<a href="https://S-CHOI-S.github.io/publications">[code]</a>
+			<!-- <a href="https://arxiv.org/abs/2412.08522">[paper]</a> -->
+			<a href="https://tmjeong1103.github.io/CoRe/">[page]</a>
+			<!-- <a href="https://S-CHOI-S.github.io/publications">[code]</a> -->
             </p>
                 </div>
             </div>
